# Only build if GDAL dependencies have been found.
IF(GDAL_FOUND)
	
	IF   (DYNAMIC_OPENSCENEGRAPH)
		ADD_DEFINITIONS(-DOSGTERRAIN_LIBRARY)
	ELSE (DYNAMIC_OPENSCENEGRAPH)
		ADD_DEFINITIONS(-DOSG_LIBRARY_STATIC)
	ENDIF(DYNAMIC_OPENSCENEGRAPH)

	INCLUDE_DIRECTORIES(
		${GDAL_INCLUDE_DIR}
	)
	
	SET(LIB_NAME osgTerrain)
	SET(HEADER_PATH ${OpenSceneGraph_SOURCE_DIR}/include/${LIB_NAME})
	SET(LIB_PUBLIC_HEADERS
		${HEADER_PATH}/DataSet
		${HEADER_PATH}/Export
		${HEADER_PATH}/HeightFieldNode
		${HEADER_PATH}/HeightFieldRenderer
		${HEADER_PATH}/Version
	)

# FIXME: For OS X, need flag for Framework or dylib
	ADD_LIBRARY(${LIB_NAME}
		${OPENSCENEGRAPH_USER_DEFINED_DYNAMIC_OR_STATIC}
		${LIB_PUBLIC_HEADERS}
		DataSet.cpp
		HeightFieldNode.cpp
		HeightFieldRenderer.cpp
		Version.cpp
	)

	TARGET_LINK_LIBRARIES(${LIB_NAME}
		osg
		osgDB
		osgUtil
		osgFX
		${GDAL_LIBRARY}
		${OPENTHREADS_LIBRARY}
		${OPENGL_LIBRARIES}
	)

	INCLUDE(ModuleInstall OPTIONAL)
	
ENDIF(GDAL_FOUND)

